force-app/main/default/objects/ssot__AbnExperiment__dlm/fields/ssot__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeveloperName__c</fullName>
    <label>Developer Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeveloperName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>