force-app/main/default/objects/ssot__AbnExperiment__dlm/fields/ssot__ExperimentState__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExperimentState__c</fullName>
    <label>Experiment State</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExperimentState</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>