force-app/main/default/objects/ssot__AbnExperiment__dlm/fields/ssot__ProfileDataGraphId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProfileDataGraphId__c</fullName>
    <label>Profile DataGraph</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProfileDataGraphId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>