force-app/main/default/objects/ssot__AbnExperiment__dlm/fields/ssot__rel_1720842263518_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720842263518_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AbnExperiment_PersonalizationSchemaI_rel</label>
    <referenceTo>ssot__PersonalizationSchema__dlm</referenceTo>
    <relationshipLabel>AbnExperiment_PersonalizationSchemaI_rel</relationshipLabel>
    <relationshipName>rel_1720842263518_end</relationshipName>
    <type>Lookup</type>
</CustomField>