force-app/main/default/objects/ssot__AbnExperiment__dlm/fields/ssot__StoppedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__StoppedDateTime__c</fullName>
    <label>Stopped DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StoppedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>